--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,3 @@
 <resources>
-    <string name="app_name">AgainstTime</string>
-
-    <string name="title_activity_game">Game</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-
-    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="app_name">SpaceFighter</string>
 </resources>
